    * polymeraseWave() now has a progress bar and has faster
      processing from several changes:
      - Multi-core processing.
      - Less memory usage.
      - HMM calculations 10x faster not including muti-core
        processing.
      - Genes are ignored if they have no reads within or nearby
        instead of blindly processing all annotated genes.

SIGNIFICANT USER-VISIBLE CHANGES

    * Drop broken NonMap argument of polymeraseWave().
    * Verbose flag now works for HMM using C functions.  The large
      volume of C messages can be silenced as originally intended
      instead of always being verbose.
    * Replace sweave package vignette with Rmd for easier user
      interaction.  Less effort should be needed to maintain the
      vignette due to simpler syntax, and fewer obtuse LaTeX errors.
    * Disable default plotting of getTxDensity().  Only functions
      whose names start with 'plot' automatically generate plots.
    * windowAnalysis() now has no upper limit on stepSize.

BUG FIXES AND IMPROVEMENTS

    * Fix windowAnalysis() "subscript out of bounds" error, and
      add corner case of empty ranges.
    * Fix corner cases of breakTranscriptsOnGenes() and
      combineTranscripts() failing when no break or join errors are
      detected.
    * One can now control makeConsensusAnnotations() multi-core
      parallelism.  Remove the hard coded 10 CPU cores.
    * Move all packages from Depends to Imports to fix Travis-CI
      bootstrap errors.
    * Added unit test suite using testthat.  All bugs discovered since
      version 1.7.0 now have corresponding regression tests.
    * New maintainer in response to dead upstream.
    * Add contributor instructions in README.
    * Add GitHub continuous integration using Travis-CI, covr, and
      codecov.
    * Fix R check errors, warnings and notes:
      - Fix RgammaMLE() namespace collision between R and C functions by
	renaming C function to Rgamma().